tests/syntax_error/string_bad_hex.jou
"\xx"  # Error: \x must be followed by two hexadecimal digits (0-9, A-F) to specify a byte
